# IDT_SSc_map

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  STATUS.md  environment.yml  journal.md  pyproject.toml  ro-crate-metadata.json
.github/ISSUE_TEMPLATE/: curation_request.md  expert_review.md
.github/workflows/: docker.yml  figures.yml  lint.yml  pytest.yml  scripts-smoke.yml  validate_sbml.yml
analysis/baseline_v1.0/: README.md  SHA256SUMS  cluster_deg_multi.tsv  druggable_hubs.tsv  hubs.tsv  patient_module_scores_multi.tsv
analysis/boolean/: SSc_MIM_integrated.bnet  SSc_MIM_integrated.model.csv  SSc_MIM_integrated.raw.sif  SSc_MIM_integrated.sbml-qual.xml  SSc_MIM_integrated.sif  SSc_MIM_integrated.species.csv  SSc_MIM_integrated.transitions.csv  casq_summary.json  ssc_mim.sbml-qual  ssc_mim.sbml-qual.report.json
analysis/clinical/: CLINICAL_METADATA_GAP.md  demographics_summary.tsv  donor_metadata.tsv  metadata_gap.json  module_clinical_correlation.tsv
analysis/network/: centrality.tsv  communities.tsv  community_enrichment.tsv  crosstalk_string_validation.json  crosstalk_string_validation.tsv  dangling_species.tsv  hub_overlap.tsv  hubs.tsv  novelty.json  novelty_kegg.tsv  sink_connectivity.summary.json  sink_connectivity.tsv  summary.json
curation/: pubmed_corpus.bib  ssc_curated_reactions.tsv
data/: MIRROR.md  MIRROR.sha256
docs/: biomodels_submission.md  coauthor_brief.md  crosstalk_matrix.md  curation_decisions.md  curation_guidelines.md  curation_plan.md  historical_roadmap.md  import_pilot.md  mi2cast_checklist.md  omics_decision.md  risks.md  scoping_notes.md
manuscript/: ACR2026_late_breaking_abstract.md  ACR2026_regular_abstract.md  SSc_MIM_manuscript_draft.md  cover_letter_v1.1.md
minerva/: deployment_notes.md
reviewing/: PROGRESS.md  R1_systems_biology.md  R2_scRNAseq_clinical.md  R3_reproducibility.md  README.md  REVISION_ROADMAP.md  editor_decision.md  revision_plan.md
scripts/: bib_lookup.py  boolean_inference.py  build_crosstalk_supp.py  build_manuscript_pdf.py  build_overlay.py  build_overlay_multi.py  check_bib.py  check_module_specs.py  clinical_correlation.py  compute_novelty.py  deg_mixed_effects.py  demographic_match.py  draft_abstract.py  druggable_hubs.py  dump_dangling_species.py  extract_pmids_from_biopax.py  fetch_clinical_metadata.py  fetch_tabib.py  generate_crosstalk_scaffold.py  harmonise_imports.py  inject_miriam.py  integrate_modules.py  m3_vascular_subset.py  minerva_preflight.py  network_analysis.py  post_process_reactome.py  reactome_pilot.py  release_prep.py  render_f1_quadrant.py  render_f2_aucell.py  render_figures.py  run_celltypist.py  score_aucell.py  seed_species_from_imports.py  sink_connectivity.py  ssc_additions_template.py  summarise_casq.py  test_celldesigner_loadability.py  validate_crosstalk_string.py  validate_sbml.py  (+2 more)
(+158 files in other folders)
